Fixed the spacing issue, the input form now uses dynamic sizing for the input field based upon how many characthers are in the input

--- a/src/scss/widgetsComponents/rangeSlider.scss
+++ b/src/scss/widgetsComponents/rangeSlider.scss
@@ -1,6 +1,5 @@
 .rangeSliderFormControl{
-    width: 0;
-    min-width: 100%;
+    max-width: 7.5rem;
     border: none;
     text-align: left;
     padding: 0;
@@ -16,9 +15,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-left: 35%;
+    margin-right: 25%;
     
 }
 
 .rangeSliderFormControlCol{
-    width: 1rem;
+    
 }
